test/Parse/function_call.code
// RUN: %target-typecheck-verify-language

fn foo(x: Int) {}
foo(: 1) // expected-error{{expected argument label before colon}} expected-error{{missing argument label 'x:' in call}}
